cabal-version: 3.0
name: postgresql-simple-postgresql-types
version: 0
category: PostgreSQL, Codecs
synopsis: Integration of "postgresql-simple" with "postgresql-types"
homepage: https://github.com/nikita-volkov/postgresql-simple-postgresql-types
bug-reports: https://github.com/nikita-volkov/postgresql-simple-postgresql-types/issues
author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2026, Nikita Volkov
license: MIT
license-file: LICENSE
extra-doc-files:
  LICENSE
  README.md

source-repository head
  type: git
  location: https://github.com/nikita-volkov/postgresql-simple-postgresql-types

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    NoImplicitPrelude
    NoMonomorphismRestriction
    NumericUnderscores
    OverloadedRecordDot
    OverloadedStrings
    ParallelListComp
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    UnboxedTuples
    ViewPatterns

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Database.PostgreSQL.Simple.PostgresqlTypes

  other-modules:
    Database.PostgreSQL.Simple.PostgresqlTypes.Prelude
    Database.PostgreSQL.Simple.PostgresqlTypes.ViaIsScalar

  build-depends:
    attoparsec ^>=0.14.4,
    base >=4.11 && <5,
    postgresql-simple >=0.7.0.1 && <0.8,
    postgresql-types,
    postgresql-types-algebra,
    tagged ^>=0.8.9,
    text >=1.2 && <3,
    text-builder ^>=1.0.0.5,

test-suite integration-tests
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/integration-tests
  main-is: Main.hs
  other-modules:
    IntegrationTests.Scopes
    IntegrationTests.Scripts

  build-depends:
    QuickCheck >=2.14 && <3,
    async >=2.2.6 && <2.3,
    base >=4.11 && <5,
    hspec >=2.11 && <3,
    postgresql-simple >=0.7.0.1 && <0.8,
    postgresql-simple-postgresql-types,
    postgresql-types,
    postgresql-types-algebra,
    quickcheck-instances ^>=0.3.33,
    stm >=2.5 && <3,
    tagged ^>=0.8.9,
    testcontainers-postgresql ^>=0.2.0.1,
    text >=1.2 && <3,
